Add scope check for auth middleware
